[gd_scene load_steps=6 format=2]

[ext_resource path="res://Carreratrack.PNG" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Path2D.gd" type="Script" id=3]
[ext_resource path="res://Panel.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -9.07874, 47.3176, 0, 0, 0, 0, -76.95, 43.3104, 0, 0, 0, 0, -153.9, 43.3104, 0, 0, 0, 0, -232.56, 46.9196, 0, 0, 0, 0, -326.61, 45.115, 0, 0, 0, 0, -369.36, 43.3104, 0, 0, 0, 0, -444.6, 45.115, 0, 0, 0, 0, -487.35, 45.115, 0, 0, 0, 0, -523.26, 27.069, 0, 0, 0, 0, -557.46, 9.02298, 0, 0, 0, 0, -579.69, -21.6552, 0, 0, 0, 0, -596.79, -50.5287, 0, 0, 0, 0, -601.92, -95.6437, 0, 0, 0, 0, -584.82, -157, 0, 0, 0, 0, -547.2, -203.92, 0, 0, 0, 0, -506.16, -232.793, 0, 0, 0, 0, -444.6, -229.184, 0, 0, 0, 0, -403.56, -220.161, 0, 0, 0, 0, -360.81, -187.678, 0, 0, 0, 0, -336.87, -149.782, 0, 0, 0, 0, -300.96, -111.885, 0, 0, 0, 0, -271.89, -95.6437, 0, 0, 0, 0, -225.72, -75.7931, 0, 0, 0, 0, -179.55, -68.5747, 0, 0, 0, 0, -124.83, -66.7701, 0, 0, 0, 0, -68.4, -64.9655, 0, 0, 0, 0, -39.33, -66.7701, 0, 0, 0, 0, 8.55005, -70.3793, 0, 0, 0, 0, 70.11, -64.9655, 0, 0, 0, 0, 112.86, -64.9655, 0, 0, 0, 0, 165.87, -64.9655, 0, 0, 0, 0, 213.75, -64.9655, 0, 0, 0, 0, 282.15, -64.9655, 0, 0, 0, 0, 342, -68.5747, 0, 0, 0, 0, 405.27, -68.5747, 0, 0, 0, 0, 456.57, -72.1839, 0, 0, 0, 0, 504.45, -55.9425, 0, 0, 0, 0, 542.07, -36.0919, 0, 0, 0, 0, 576.27, 3.60919, 0, 0, 0, 0, 600.21, 37.8966, 0, 0, 0, 0, 595.08, 101.057, 0, 0, 0, 0, 572.85, 142.563, 0, 0, 0, 0, 535.23, 184.069, 0, 0, 0, 0, 502.74, 209.333, 0, 0, 0, 0, 463.41, 207.529, 0, 0, 0, 0, 415.53, 207.529, 0, 0, 0, 0, 369.36, 175.046, 0, 0, 0, 0, 333.45, 131.736, 0, 0, 0, 0, 300.96, 88.4253, 0, 0, 0, 0, 241.11, 52.3333, 0, 0, 0, 0, 172.71, 39.7012, 0, 0, 0, 0, 90.6301, 43.3104, 0, 0, 0, 0, 34.2, 43.3104, 0, 0, 0, 0, -9.07874, 47.3176 )
}

[node name="Node2D" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 427, 200 )
scale = Vector2( 0.584795, 0.55414 )
texture = ExtResource( 1 )

[node name="Path2D" type="Path2D" parent="Sprite"]
curve = SubResource( 1 )
script = ExtResource( 3 )

[node name="follow" type="PathFollow2D" parent="Sprite/Path2D"]
position = Vector2( -9.07874, 47.3176 )
rotation = -3.08262

[node name="Sprite" type="Sprite" parent="Sprite/Path2D/follow"]
texture = ExtResource( 2 )

[node name="Panel" type="Panel" parent="Sprite"]
margin_left = -259.912
margin_top = 342.757
margin_right = 326.088
margin_bottom = 521.757
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Panel"]
margin_left = 190.924
margin_top = 23.5302
margin_right = 309.924
margin_bottom = 67.5302
text = "SLOTRACER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="START" type="Button" parent="Sprite/Panel/Label"]
margin_left = -130.354
margin_top = 57.2436
margin_right = 0.646301
margin_bottom = 100.244
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed_up" type="Button" parent="Sprite/Panel/Label"]
margin_left = 26.0
margin_top = 37.0
margin_right = 139.0
margin_bottom = 75.0
text = "Speed+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="STOP" type="Button" parent="Sprite/Panel/Label"]
margin_left = 176.928
margin_top = 56.3269
margin_right = 305.928
margin_bottom = 92.3269
text = "STOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed_down" type="Button" parent="Sprite/Panel/Label"]
margin_left = 23.0
margin_top = 89.0
margin_right = 146.0
margin_bottom = 124.0
text = "speed-"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Sprite/Panel/Label/START" to="Sprite/Path2D" method="_on_START_pressed"]
[connection signal="pressed" from="Sprite/Panel/Label/Speed_up" to="Sprite/Path2D" method="_on_Speed_up_pressed"]
[connection signal="pressed" from="Sprite/Panel/Label/STOP" to="Sprite/Path2D" method="_on_STOP_pressed"]
[connection signal="pressed" from="Sprite/Panel/Label/Speed_down" to="Sprite/Path2D" method="_on_Speed_down_pressed"]
